# filterbot

./: .gitignore  config.py  dron_server.pem  handlers.py  main.py  pyproject.toml  test_app.py
asyncio_special/: app.py  context_vars.py
src/: .gitignore  Dockerfile  app.py  config.ini.dist  docker-compose.yml  keyboards.py  loader.py  models.py  pyproject.toml  requirements.txt
src/data/: config.py
src/handlers/: __init__.py  admin_panel.py  handlers.py
src/middlewares/: __init__.py  throttling.py
src/states/: __init__.py  manage_words.py
src/utils/: __init__.py  db_utils.py  loop.py  misc.py  notify_admins.py  set_bot_commands.py
