[tool.poetry]
name = "filterbot"
version = "0.1.0"
description = ""
authors = ["top1Dron <pro100moneyfarmer@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
requests = "^2.26.0"
aiogram = "^2.14.3"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
