[tool.poetry]
name = "filterbot"
version = "0.1.0"
description = ""
authors = ["top1Dron <pro100moneyfarmer@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
aiogram = "^2.14.3"
peewee = "^3.14.4"
psycopg2 = "^2.9.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
